<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/snow"
    tools:context="fall2018.csc207.menu.GameMenuActivity">

    <TextView
        android:id="@+id/txtInfo"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="start"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/circlebackgroundpink"
        android:clickable="true"
        android:gravity="center"
        android:onClick="showGameInstructions"
        android:text="@string/exclamation_mark"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Info"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/info_title"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/game_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="120dp"
        android:layout_marginTop="42dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/sliding_tiles"
        android:textColor="@android:color/black"
        android:textSize="48sp" />

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardBackgroundColor="@android:color/transparent"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="0dp">

        <android.support.v7.widget.CardView
            android:id="@+id/new_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginHorizontal="32dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:textSize="24sp"
            app:cardBackgroundColor="@color/brightlightblue"
            card_view:cardCornerRadius="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="16dp"
                android:text="@string/new_game"
                android:textColor="@color/black_overlay"
                android:textSize="36sp" />
        </android.support.v7.widget.CardView>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardBackgroundColor="@android:color/transparent"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="0dp">

        <android.support.v7.widget.CardView
            android:id="@+id/load_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="12dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:textSize="24sp"
            app:cardBackgroundColor="@color/brightlightblue"
            card_view:cardCornerRadius="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="16dp"
                android:text="@string/load_game"
                android:textColor="@color/black_overlay"
                android:textSize="36sp" />
        </android.support.v7.widget.CardView>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardBackgroundColor="@android:color/transparent"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="0dp">

        <android.support.v7.widget.CardView
            android:id="@+id/score_board"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginHorizontal="32dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:textSize="24sp"
            app:cardBackgroundColor="@color/brightlightblue"
            card_view:cardCornerRadius="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="16dp"
                android:text="@string/scoreboard"
                android:textColor="@color/black_overlay"
                android:textSize="36sp" />
        </android.support.v7.widget.CardView>
    </android.support.v7.widget.CardView>
</LinearLayout>