<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="330dp"
    android:layout_height="285dp"
    android:layout_gravity="center"
    android:background="@color/lightgray"
    android:orientation="vertical"
    android:padding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/txtInfo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:background="@drawable/circlebackgroundpink"
            android:clickable="true"
            android:gravity="center"
            android:onClick="showInfo"
            android:text="@string/exclamation_mark"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtclose"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginStart="255dp"
            android:background="@drawable/circlebackgroundpurple"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/x"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/create_new_acc"
            android:textColor="@color/green"
            android:textSize="26sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="7dp"
            android:paddingEnd="0dp">

            <LinearLayout
                android:layout_width="85dp"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/username"
                    android:textColor="@color/black_overlay"
                    android:textSize="18sp"
                    android:textStyle="bold"

                    />
            </LinearLayout>

            <EditText
                android:id="@+id/usernameSignupEditText"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:digits="0123456789*,qwertzuiopasdfghjklyxcvbnm"
                android:ems="10"
                android:hint="@null"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="7dp"
            android:paddingEnd="0dp">

            <LinearLayout
                android:layout_width="85dp"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/password"
                    android:textColor="@color/black_overlay"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <EditText
                android:id="@+id/passwordSignupEditText"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:digits="0123456789*,qwertzuiopasdfghjklyxcvbnm"
                android:ems="10"
                android:hint="@null"
                android:inputType="textPassword" />
        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:clickable="true"
        android:elevation="0dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:textSize="24sp"
        app:cardBackgroundColor="@android:color/transparent"
        card_view:cardCornerRadius="15dp">

        <android.support.v7.widget.CardView
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:elevation="0dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:textSize="24sp"
            app:cardBackgroundColor="@color/green"
            app:cardCornerRadius="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/submit"
                android:textColor="@color/black_overlay"
                android:textSize="25sp" />
        </android.support.v7.widget.CardView>
    </android.support.v7.widget.CardView>
</LinearLayout>